data/derived/comb/progs/unify/prog3717.ml.out
Characters 507-509:
  | Monkey(e1 , e2) -> if eval(e1, x, y) < eval(e2, x, y) then -1 else 1;;
                                                               ^^
Error: This expression has type int but an expression was expected of type
         float
